AS-2004-04-21-0: CVS        Created V60_beta2_target_{BRANCH,TAG}
-----------------------------------------------------------------

DT-2004-04-21-0: Enhancem.: o Streamlined event master locking
                            o Did various cosmetic fixes
                            o Added script for submiting multiple simultaneous
                              qsubs
                 Changed:   EVM, cull, qmaster, GDI, JAPI, mirror, UTI, scripts
                 Review:    SG, AD

MD-2004-04-21-2: Bugfix:    removed confusing text!
                 Changed:   rc-template

JG-2004-04-22-0: Enhancem.: distinst: Copy Berkeley DB backup/restore utilities
                            to utilbin.
                            Output diagnosis messages for Berkeley DB spooling
                            in log_level log_debug.
                 Bugfix:    Fixed aimk -spool-*
                 Review:    SG

MD-2004-04-21-1: Bugfix:    - if SGE_ROOT was already set, the scripts
                              throws thsi away and asked again
                            - addapted testsuite to inst_sge
                 Changed:   testsuite, inst_sge
                 Issue:     973
                 Review:    AS (pending)

MD-2004-04-21-0: Bugfix:    - library path was wrong
                            - cleanups removed SGEEE's
                            - removed unused entries in config template

                 Enhancem.: - basic backup/restore function
                            - rc script checks, if master has started
                            - start schedd, after comm to master is available
                            - new entry in configuration
                 Changed:   inst_sge, install_modules
                 Issue:     972
                 Review:    CR, AS (pending)

AA-2004-04-20-3: Bugfix:    dlopen for all archs but hp11 for libcrypto
                            openssl 0.9.7d
                 Changed:   aimk, aimk.site, distinst.site, all bins